Google Guice example benchmark