@@ -32,7 +32,7 @@ Minimal params(-Xms1m -Xmx2m  -XX:MaxMetaspaceSize=9m -XX:+UseSerialGC -XX:+UseS
 
 ### Spring Rest
 
-Runns spring boot application with simple handler 
+Runs spring boot application with simple handler 
 
 ```java
 package org.deer.java8.spring.rest;
@@ -66,3 +66,35 @@ Minimal params(-XX:+AggressiveOpts -Xms1m -Xmx18m -XX:-UseCompressedClassPointer
 
 ![alt ](https://raw.githubusercontent.com/Marssmart/myths-about-java/master/myths/memory-consumption/java-8-spring-rest-only/src/main/resources/images/footprint_minimal.jpg "")
 
+### Google Juice
+
+Runs Google juice DI in simplistic example
+
+ ```java
+ 
+ package org.deer.java8.google.guice.memory.consumption;
+ 
+ import com.google.inject.Guice;
+ import com.google.inject.Injector;
+ 
+ public class GuiceRunner {
+ 
+   public static void main(String[] args) throws InterruptedException {
+     final Injector injector = Guice.createInjector(new TestModule());
+     final TestService instance = injector.getInstance(TestService.class);
+     instance.doNothing();
+     System.out.println("Google Guice running !");
+     Thread.currentThread().join();
+   }
+ }
+ ```
+ 
+ #### Java 8
+ 
+ Default start params 
+ 
+ ![alt ](https://raw.githubusercontent.com/Marssmart/myths-about-java/master/myths/memory-consumption/java-8-google-juice/src/main/resources/images/footprint_base.jpg "")
+ 
+ Minimal params(-XX:+AggressiveOpts -Xms1m -Xmx18m -XX:-UseCompressedClassPointers -XX:MaxMetaspaceSize=36m -XX:+ScavengeBeforeFullGC -XX:+UseSerialGC -XX:+UseStringDeduplication)
+ 
+ ![alt ](https://raw.githubusercontent.com/Marssmart/myths-about-java/master/myths/memory-consumption/java-8-google-juice/src/main/resources/images/footprint_minimal.jpg "")
